# LevelDevil

./: .gitignore  CMakeLists.txt  vcpkg.json
code/: CMakeLists.txt  main.cpp  precomp.h
code/App/: App.cpp  App.h
code/Model/: entity_model.h  entity_model_test.cpp  level1.json  object.h
code/View/: MainWindow.h
code/View/widgets/: GameWidget.cpp  GameWidget.h
code/ViewModel/: entity_view_model.h
code/common/: Entity.h  commands.h  frame.cpp  frame.h  game_map.h  globals.cpp  property_ids.h
code/view/: MainWindow.cpp
code/view/widgets/: GameWidget.cpp
